some routes updated

--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -1,1 +1,68 @@
-<p>forgot-password works!</p>
+<div
+  class="container d-flex justify-content-center align-items-center"
+  style="height: 100vh"
+>
+  <div
+    class="card p-4"
+    style="width: 20rem; background-color: #212529; color: white"
+  >
+    <div class="card-body text-center">
+      <div class="mb-4">
+        <a href="#" class="btn btn-primary btn-sm"
+          ><i class="fa fa-facebook"></i
+        ></a>
+        <a href="#" class="btn btn-danger btn-sm"
+          ><i class="fa fa-google"></i
+        ></a>
+        <a href="#" class="btn btn-info btn-sm"
+          ><i class="fa fa-twitter"></i
+        ></a>
+      </div>
+      <h5 class="card-title">Sign In</h5>
+      <form>
+        <div class="mb-3">
+          <div class="input-group">
+            <span class="input-group-text" id="username-addon"
+              ><i class="fa fa-user"></i
+            ></span>
+            <input
+              type="text"
+              class="form-control"
+              placeholder="username"
+              aria-label="username"
+              aria-describedby="username-addon"
+            />
+          </div>
+        </div>
+        <div class="mb-3">
+          <div class="input-group">
+            <span class="input-group-text" id="password-addon"
+              ><i class="fa fa-lock"></i
+            ></span>
+            <input
+              type="password"
+              class="form-control"
+              placeholder="password"
+              aria-label="password"
+              aria-describedby="password-addon"
+            />
+          </div>
+        </div>
+        <button type="submit" class="btn btn-warning w-100">
+          Forgot Password
+        </button>
+      </form>
+      <div class="mt-3">
+        <p class="fs-6">
+          Ohh i remember
+          <a
+            routerLink="../login"
+            routerLinkActive="router-link-active"
+            class="text-warning"
+            >Back to Login</a
+          >
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
