--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,72 @@
-<p>login works!</p>
+<div
+  class="container d-flex justify-content-center align-items-center"
+  style="height: 100vh; width: 100vw"
+>
+  <div
+    class="card p-3"
+    style="
+      width: 20rem;
+
+      color: white;
+    "
+  >
+    <div class="card-body text-center">
+      <div class="mb-4">
+        <a href="#" class="btn btn-primary btn-sm"
+          ><i class="fa fa-facebook"></i
+        ></a>
+        <a href="#" class="btn btn-danger btn-sm"
+          ><i class="fa fa-google"></i
+        ></a>
+        <a href="#" class="btn btn-info btn-sm"
+          ><i class="fa fa-twitter"></i
+        ></a>
+      </div>
+      <h5 class="card-title">Sign In</h5>
+      <form>
+        <div class="mb-3">
+          <div class="input-group">
+            <span class="input-group-text" id="username-addon"
+              ><i class="fa fa-user"></i
+            ></span>
+            <input
+              type="text"
+              class="form-control"
+              placeholder="username"
+              aria-label="username"
+              aria-describedby="username-addon"
+            />
+          </div>
+        </div>
+        <div class="mb-3">
+          <div class="input-group">
+            <span class="input-group-text" id="password-addon"
+              ><i class="fa fa-lock"></i
+            ></span>
+            <input
+              type="password"
+              class="form-control"
+              placeholder="password"
+              aria-label="password"
+              aria-describedby="password-addon"
+            />
+          </div>
+        </div>
+        <div class="form-check mb-3">
+          <input type="checkbox" class="form-check-input" id="rememberMe" />
+          <label class="form-check-label" for="rememberMe">Remember Me</label>
+        </div>
+        <button type="submit" class="btn btn-warning w-100">Login</button>
+      </form>
+      <div class="mt-3">
+        <a
+          [routerLink]="['../forgot-password']"
+          routerLinkActive="router-link-active"
+          class="text-warning"
+          >Forgot your password?</a
+        ><br />
+        <a href="#" class="text-warning">Don't have an account? Sign Up</a>
+      </div>
+    </div>
+  </div>
+</div>
