modified all the files and some changes made

--- a/src/app/modules/admin/components/header/header.component.html
+++ b/src/app/modules/admin/components/header/header.component.html
@@ -18,7 +18,7 @@
     /></a>
     <a href="#"
       ><img
-        src="../../../../../assets/images/logo.png"
+        src="assets/images/logo.png"
         alt="Search"
         width="100%"
         height="50px"
@@ -40,7 +40,7 @@
     <a href="http://localhost:4200/admin/home">Sanatan Collectibles</a>
     <a href="http://localhost:4200/admin/home">Catalog</a>
     <a href="http://localhost:4200/admin/home">Customer Review</a>
-    <a href="http://localhost:4200/admin/home">About Us</a>
-    <a href="http://localhost:4200/admin/home">Contact</a>
+    <a href="http://localhost:4200/admin/about">About Us</a>
+    <a href="http://localhost:4200/admin/contact">Contact</a>
   </nav>
 </header>
