--- a/src/app/modules/admin/components/footer/footer.component.css
+++ b/src/app/modules/admin/components/footer/footer.component.css
@@ -55,15 +55,21 @@ footer {
   font-size: 0.9em;
 }
 
-.email-input-container {
+.input-container {
   display: flex;
-  align-items: center;
+  justify-content: center;
+  align-self: center;
+}
+
+.email-input-container {
+  width: 20%;
+  display: flex;
   border: 2px solid #d5d5d5;
   border-radius: 25px;
   overflow: hidden;
   background-color: #fff2a8; /* Light yellow background */
   padding: 5px 10px;
-  width: fit-content;
+  /* width: fit-content; */
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
