--- a/src/app/modules/admin/components/footer/footer.component.html
+++ b/src/app/modules/admin/components/footer/footer.component.html
@@ -5,9 +5,11 @@
       Join our email list for exclusive offers and the latest news.
     </p>
 
-    <div class="email-input-container">
-      <input type="email" placeholder="Email" class="email-input" />
-      <button class="email-button">→</button>
+    <div class="input-container">
+      <div class="email-input-container">
+        <input type="email" placeholder="Email" class="email-input" />
+        <button class="email-button">→</button>
+      </div>
     </div>
   </div>
   <div class="footer-container">
