modified all the files and some changes made

--- a/src/app/modules/admin/components/footer/footer.component.html
+++ b/src/app/modules/admin/components/footer/footer.component.html
@@ -36,11 +36,11 @@
       <h2>The Gifter's Hub</h2>
       <p>Elevating Spirituality, Inspiring Artistry.</p>
       <p>
-        Murtihub, a haven for divine craftsmanship, merges spirituality with
+        Gifter's Hub, a haven for divine craftsmanship, merges spirituality with
         artistry. Our meticulously designed idols and artifacts transcend the
         ordinary, infusing sacred energy and aesthetic allure into every
-        creation. Welcome to Murtihub where the divine is meticulously crafted
-        into every detail.
+        creation. Welcome to Gifter's Hub where the divine is meticulously
+        crafted into every detail.
       </p>
     </div>
   </div>
