admin role managed and collections module added

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -56,7 +56,9 @@
           <input type="checkbox" class="form-check-input" id="rememberMe" />
           <label class="form-check-label" for="rememberMe">Remember Me</label>
         </div>
-        <button type="submit" class="btn btn-warning w-100">Login</button>
+        <button type="submit" class="btn btn-warning w-100" onsubmit="">
+          <a href="http://localhost:4200/admin">Login</a>
+        </button>
       </form>
       <div class="mt-3">
         <a
