--- a/src/app/modules/collections/components/header/header.component.html
+++ b/src/app/modules/collections/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <!-- <div class="header-top">
+  <div class="header-top">
     <div class="contact-info">
       <h6>
         <a href="tel:9999999999"
@@ -7,7 +7,7 @@
         ></a>
       </h6>
     </div>
-  </div> -->
+  </div>
   <div class="search-cart">
     <a href="#"
       ><img
@@ -33,8 +33,14 @@
   </div>
 
   <nav class="nav">
-    <a href="http://localhost:4200/admin/categoryMaster">Category Master</a>
-    <a href="http://localhost:4200/admin/productMaster">Product Master</a>
-    <a href="http://localhost:4200/admin/priceMaster">Price Master</a>
+    <a href="http://localhost:4200/collections/home">Car Dashboard Idols</a>
+    <a href="http://localhost:4200/collections/home">Ram Darbar</a>
+    <a href="http://localhost:4200/collections/home">Small Temples</a>
+    <a href="http://localhost:4200/collections/home">Table top decor</a>
+    <a href="http://localhost:4200/collections/home">Sanatan Collectibles</a>
+    <a href="http://localhost:4200/collections/home">Catalog</a>
+    <a href="http://localhost:4200/collections/home">Customer Review</a>
+    <a href="http://localhost:4200/collections/about">About Us</a>
+    <a href="http://localhost:4200/collections/contact">Contact</a>
   </nav>
 </header>
