--- a/src/app/modules/collections/components/about/about.component.html
+++ b/src/app/modules/collections/components/about/about.component.html
@@ -64,7 +64,7 @@
   <footer>
     <span>
       Get in Touch:
-      <a href="mailto:murtihubstudio@gmail.com">murtihubstudio@gmail.com</a>
+      <a href="mailto:gifterhub@gmail.com">giftershub&#64;gmail.com</a>
     </span>
   </footer>
 </body>
